Fixed issue with styling of Player when player has no card or cardrank Player is now a wider container with cards displayed to the side Sit Div is a lighter color so it contrasts with black background Repositioned all Player positions Re-styled CardRank div: made the text less opaque

--- a/src/components/Room/GameBoard.css
+++ b/src/components/Room/GameBoard.css
@@ -12,7 +12,8 @@
 }
 
 .gameBoard__card {
-    height: 100px;
+    /* height: 100px; */
+    width: 92px;
     margin: 0 -4px;
 }
 
