--- a/src/components/Room/PlayerCardRank.css
+++ b/src/components/Room/PlayerCardRank.css
@@ -1,10 +1,16 @@
+.playerCardRank__placeHolder {
+    height: 18.69px;
+}
+
 .playerCardRank {
+    position: relative;
+    top: -10px;
+    left: -16px;
     background-color: coral;
-    /* max-width: 80%; */
     white-space: nowrap; /* keeps it to one line */
-    color: AliceBlue;
-    font-size: 12px;
-    border-radius: 12px;
+    color: rgba(240, 248, 255, 0.6);
+    font-size: 9px;
+    border-radius: 4px;
     padding: 3px 7px;
     box-shadow: 2px 2px rgba(0, 0, 0, .2);
 }
